@@ -57,6 +57,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3381] negative multipliers for items with value type "numeric (float)" are now allowed (KB)
  - [ZBX-1357] updated Japanese translation (Richlv)
  - [ZBX-3385] fixed trigger status change record in audit log (Vedmak)
  - [ZBX-3383] fixed error in audit log when filter by Macro or Template (Vedmak)
